# libzbxredis

./: .gitignore  COPYING  ChangeLog  Makefile.am  README.md  aclocal.m4  configure.ac
Zabbix-Resources/Zabbix-2.2/Templates/: Template Redis Server.xml
Zabbix-Resources/Zabbix-2.2/Value-Maps/: README.md
Zabbix-Resources/Zabbix-2.2/Zabbix-Agent-Bench/: Template Redis Server.agent_bench
Zabbix-Resources/Zabbix-2.4/Templates/: Template Redis Server.xml
Zabbix-Resources/Zabbix-2.4/Zabbix-Agent-Bench/: Template Redis Server With Authentication.agent_bench
Zabbix-Resources/Zabbix-3.0/Templates/: Template Redis Server.xml
Zabbix-Resources/Zabbix-3.0/Value-Maps/: Template Redis Server Value Maps.xml
Zabbix-Resources/Zabbix-3.2/Templates/: Template Redis Server.xml
Zabbix-Resources/Zabbix-3.2/Value-Maps/: Template Redis Server Value Maps.xml
Zabbix-Resources/Zabbix-3.2/Zabbix-Agent-Bench/: Template Redis Server With Authentication.agent_bench  Template Redis Server.agent_bench
m4/: ax_header_hiredis.m4  ax_header_zabbix.m4  ax_lib_hiredis.m4
src/: Makefile.am  libzbxredis.c  libzbxredis.h  redis.c
